[gd_scene load_steps=3 format=3 uid="uid://dktybapk8hxg2"]

[ext_resource type="Script" path="res://scenes/card_control/card_control.gd" id="1_ca4o1"]
[ext_resource type="Texture2D" uid="uid://vhk62gcamtq0" path="res://resources/cards/card_back.png" id="2_sefnp"]

[node name="CardControl" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_ca4o1")
metadata/_edit_group_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 96.0
offset_bottom = 128.0
texture = ExtResource("2_sefnp")

[node name="ShipTexture" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 16.0
offset_right = 96.0
offset_bottom = 112.0

[node name="NameLabel" type="Label" parent="."]
visible = false
layout_mode = 2
offset_top = 51.0
offset_right = 96.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Hello"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 96.0
offset_bottom = 26.0
alignment = 1

[node name="AttackLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.6, 0.760784, 0.858824, 1)
text = "2"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 0.67451, 0.498039, 1)
theme_override_font_sizes/font_size = 16
text = "4"
horizontal_alignment = 1
